# sortipy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: data_pipeline.md  todo.md  user-stories.md
docs/adr/: 0001-architecture-style.md  0002-domain-model.md  0003-persistence-mapping.md  0004-ingestion-strategy.md  0005-configuration-management.md  0006-ui-adapters.md  0007-data-provenance.md  0008-canonical-merges.md  index.md
docs/policies/: database.md  logging.md  testing.md  typing.md
docs/user-stories/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  DF1.md  DF2.md  DF3.md  index.md
src/sortipy/: __init__.py  app.py  main.py
src/sortipy/adapters/: http_resilience.py  lastfm.py  musicbrainz.py  spotify_db.py  spotipy.py  sqlalchemy.py
src/sortipy/adapters/lastfm/: __init__.py  client.py  fetcher.py  schema.py  translator.py
src/sortipy/adapters/musicbrainz/: __init__.py  candidates.py  client.py  fetcher.py  schema.py  translator.py
src/sortipy/adapters/spotify/: __init__.py  client.py  fetcher.py  schema.py  translator.py
src/sortipy/adapters/sqlalchemy/: __init__.py  mappings.py  merger.py  repositories.py  sidecar_mappings.py  unit_of_work.py
src/sortipy/adapters/sqlalchemy/migrations/: __init__.py  env.py  script.py.mako
src/sortipy/adapters/sqlalchemy/migrations/versions/: 822b044566e8_baseline_schema.py  __init__.py  b7f9c7f4d2b1_reconciliation_schema_fields.py  e7f7ef2162a5_external_id_redirects.py  faa9c956fcbe_baseline_schema.py
src/sortipy/application/: __init__.py  claim_graphs.py  ingest.py  release_updates.py
src/sortipy/common/: __init__.py  config.py  logging.py  repository.py  storage.py  unit_of_work.py
src/sortipy/config/: __init__.py  env.py  errors.py  http_resilience.py  lastfm.py  logging.py  musicbrainz.py  spotify.py  storage.py  sync.py
src/sortipy/domain/: _types.py  canonicalization.py  data_integration.py  enrichment.py  time_windows.py  types.py
src/sortipy/domain/entity_updates/: __init__.py  apply.py  dto.py  resolve.py
src/sortipy/domain/ingest_pipeline/: __init__.py  canonicalization.py  context.py  deduplication.py  entity_ops.py  ingest_ports.py  normalization.py  orchestrator.py  runner.py  state.py
src/sortipy/domain/model/: __init__.py  _internal.py  associations.py  audit.py  base.py  entity.py  enums.py  external_ids.py  music.py  primitives.py  provenance.py  user.py
src/sortipy/domain/ports/: __init__.py  enrichment.py  fetching.py  persistence.py  unit_of_work.py
src/sortipy/domain/reconciliation/: __init__.py  apply.py  catalog.py  claims.py  contracts.py  deduplicate.py  engine.py  factory.py  graph.py  normalize.py  persist.py  plan.py  policy.py  release_candidates.py  resolve.py  workflows.py
src/sortipy/ui/: cli.py
tests/: conftest.py
tests/adapters/: test_lastfm_adapter.py  test_sqlalchemy_repository.py
tests/adapters/musicbrainz/: __init__.py  conftest.py  test_candidates.py  test_client.py  test_fetcher.py  test_schema.py  test_translator.py
tests/adapters/spotify/: __init__.py  conftest.py  test_client.py  test_fetcher.py  test_schema.py  test_translator.py
tests/adapters/sqlalchemy/: test_mappings.py  test_normalization_sidecar_repository.py  test_reconciliation.py  test_repositories.py  test_sqlalchemy_merger.py  test_unit_of_work.py
tests/app/: __init__.py  test_lastfm_reconciliation.py  test_lastfm_sync.py  test_main_cli.py  test_musicbrainz_reconciliation.py
tests/common/: test_config.py  test_storage.py  test_time_windows.py
tests/config/: __init__.py  test_config.py
tests/data/: lastfm_recent_tracks.jsonl
tests/data/lastfm/: lastfm_recent_tracks.jsonl
tests/data/musicbrainz/: recordings.jsonl  releases.jsonl
tests/data/spotify/: followed_artists_raw.json  saved_albums_raw.json  saved_tracks_raw.json
tests/domain/: test_canonicalization.py  test_data_integration.py  test_ingest_canonicalization.py  test_ingest_deduplication.py  test_types.py
tests/domain/data_integration/: __init__.py  test_library_items.py  test_play_events.py
tests/domain/ingest_pipeline/: __init__.py  test_canonicalization_phase.py  test_context_ingest_graph.py  test_deduplication_phase.py  test_entity_ops.py  test_model_ingest_graph.py  test_normalization_phase.py  test_orchestrator.py
tests/domain/model/: __init__.py  test_entity_identity.py  test_error_paths.py  test_external_ids.py  test_music_graph.py  test_provenance.py  test_user_ownership.py
tests/domain/reconciliation/: test_apply.py  test_catalog.py  test_claims.py  test_deduplicate.py  test_engine.py  test_graph.py  test_library_item_workflows.py  test_normalize.py  test_persist.py  test_play_event_workflows.py  test_policy.py  test_resolve.py
tests/helpers/: __init__.py  library_items.py  play_events.py
tests/integration/: __init__.py  test_sqlalchemy_canonicalization.py  test_sqlalchemy_play_event_reconciliation.py  test_sqlalchemy_play_event_sync.py  test_sqlalchemy_scrobble_sync.py
tests/support/: play_events.py  scrobbles.py
